--- a/templates/index.html
+++ b/templates/index.html
@@ -38,17 +38,17 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-image:linear-gradient( 
     to right, #00bfff, #00ffd5); >
     <div class="container">
-      <a class="navbar-brand" href="#">JIM SHEBIB</a>
+      <a class="navbar-brand" href="#" style="color: #073642; margin-left: 65px;"">JIM SHEBIB</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/">HOME</a>
+            <a class="nav-link" href="/" style="color: #D8ED34;">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about">ABOUT</a>
+            <a class="nav-link" href="/about" style="color: #D8ED34;">ABOUT</a>
           </li>
         </ul>
       </div>
